# cplp-data

./: .gitignore  ABOUT.md  Makefile  README.md  about_project.md  data_exploration.ipynb  pyproject.toml  scraping_dr.py  setup.py
app/: cli.py  controller.py  extract_infor_pdf.py  script_download_diariopt.py  script_extract_infor_pdf.py  script_web_scraping.py  utils.py  web_scraping.py
app/log/: default.csv
assets/processed_data/: [2007-01-01]-[2008-12-31]-extract-pdf-complete.csv  [2009-01-01]-[2010-12-31]-extract-pdf-complete.csv  [2011-01-01]-[2013-12-31]-extract-pdf-complete.csv  [2012-01-01]-[2014-12-31]-extract-pdf-complete.csv  [2015-01-01]-[2017-12-31]-extract-pdf-complete.csv  [2018-01-01]-[2020-12-31]-extract-pdf-complete.csv  [2021-01-01]-[2021-12-31]-extract-pdf-complete.csv  [2022-01-01]-[2022-12-31]-extract-pdf-complete.csv  [2023-01-01]-[2023-12-31]-extract-pdf-complete.csv  [2023-11-07]-[2023-11-07]-extract-pdf-complete.csv  [2023-12-05]-[2024-03-08]-extract-pdf-complete.csv  [2024-03-09]-[2024-04-06]-extract-pdf-complete.csv  [2024-04-06]-[2024-04-30]-extract-pdf-complete.csv  [2024-05-01]-[2024-06-16]-extract-pdf-complete.csv  [2024-06-17]-[2024-06-28]-extract-pdf-complete.csv  processed_data_extract.csv
assets/raw_data/: [2007-01-01]-[2008-12-31]-path-pdf-to-extract.csv  [2007-01-01]-[2008-12-31]-web-scraping.csv  data_scraping_raw.csv  (+30 more)
docs/: about_project.md  data_exploration.ipynb
lupa/: scrapy.cfg
scraping_diariopt/: script_download_diariopt.py  script_extract_infor_pdf.py  script_scraping_diariopt.py
tutorial/: author.jsonl
(+7 files in other folders)
